--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Version 2</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="/src/index.css" />
+    
+    <title>React App</title>
+  </head>
+  <body>
+    
+    <div id="root"></div>
+    <script type="module" src="/src/index.js"></script>
+  </body>
+</html>
